chore: Fix Strange Gap between Right Sidebar and the Edge

--- a/styles/misc.css
+++ b/styles/misc.css
@@ -6,7 +6,7 @@ body {
     align-items: stretch;
     position: fixed;
     inset: 0;
-    margin: 0;
+    margin: 0 -0.95% 0 0;
 }
 
 ::-webkit-scrollbar {
